# Brewery

./: .gitmodules  CMakeLists.txt  README.md  brewery.sqlite  ctor.sql  imgui.ini  run.sh  trigger_ctor.sql  view_ctor.sql
sources/: database.cpp  helpers.cpp  main.cpp  mediators.cpp  windows.cpp
